# rust_bt

./: .gitignore  Cargo.toml  README.md  stats.py  todo.txt
live_chart/: package-lock.json  package.json
live_chart/src/app/: page.tsx
live_chart/src/components/: TradingChart.tsx
rust_bt/: Cargo.toml  output_trade_log.txt
rust_bt/fred/: Cargo.toml
rust_bt/fred/src/: main.rs
rust_bt/src/: main.rs  output_trade_log.txt
rust_core/: Cargo.toml
rust_core/src/: engine.rs  lib.rs  live_engine.rs  plot.rs  stats.rs  util.rs
rust_core/src/data_handler/: mod.rs
rust_core/src/hedging/: mod.rs
rust_core/src/live_strategies/: live_statarbspread.rs  mod.rs
rust_core/src/position/: mod.rs
rust_core/src/strategies/: live_statarb_spread.rs  simple_strategy.rs  sma.rs  statarb_spread.rs
rust_live/: Cargo.toml
rust_live/src/: lib.rs  main.rs  server.rs  stream.rs
rust_ml/: Cargo.toml
rust_ml/src/: lib.rs  scaler.rs
rust_ml/src/inference/: mod.rs  torch_MLP.rs
rust_ml/src/inference/models/: model.pt  scaler_params.json
rust_ml/src/models/: model.pt
rust_ml/src/tools/: convert_scaler_json.py  convert_torchscript.py  export_model.py
rust_ml/src/training/: FNNtrain.py  RNNtrain.py
