[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# for numerical operations
num = "0.4"
# for statistical computations
statrs = "0.18"
# for datetime handling (if you add datetime support later)
chrono = { version = "0.4", features = ["serde"] }
# for serialization (useful for saving/loading results)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
indicatif = "0.17.0"
plotters = "0.3"
regex = "1.9"
tokio = { version = "1.36", features = ["full"] }


[dev-dependencies]
# for testing
criterion = "0.5"
proptest = "1.2"

[lib]
name = "rust_core"
path = "src/lib.rs"

[[bin]]
name = "rust_core"
path = "src/main.rs"

