[package]
name = "rust_live"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rust_core = { path = "../rust_core" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tungstenite = "0.26.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.12", features = ["json"] }
dotenv = "0.15"
chrono = "0.4"
csv = "1.3.0"
tokio-stream = "0.1"

