[package]
name = "fred"
version = "0.1.0"
edition = "2021"
description = "A tool for fetching Federal Reserve Economic Data (FRED)"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# http client
reqwest = { version = "0.12", features = [
    "json",
    "blocking"
] }

# async runtime
tokio = { version = "1.36", features = ["full"] }

# environment variables
dotenv = "0.15"

[dev-dependencies]
# testing utilities
tokio-test = "0.4"

